; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_crypto_private_key_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_crypto_private_key_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_private_key = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_private_key_free(%struct.crypto_private_key* %0) #0 {
  %2 = alloca %struct.crypto_private_key*, align 8
  store %struct.crypto_private_key* %0, %struct.crypto_private_key** %2, align 8
  %3 = load %struct.crypto_private_key*, %struct.crypto_private_key** %2, align 8
  %4 = icmp ne %struct.crypto_private_key* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load %struct.crypto_private_key*, %struct.crypto_private_key** %2, align 8
  %7 = getelementptr inbounds %struct.crypto_private_key, %struct.crypto_private_key* %6, i32 0, i32 0
  %8 = call i32 @rsa_free(i32* %7)
  %9 = load %struct.crypto_private_key*, %struct.crypto_private_key** %2, align 8
  %10 = call i32 @os_free(%struct.crypto_private_key* %9)
  br label %11

11:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @rsa_free(i32*) #1

declare dso_local i32 @os_free(%struct.crypto_private_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
